dist/manifests/kubernetes-cluster-manifests/traefik-internal/02traefik-internal-service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: traefik-ingress-service
  namespace: traefik-system
  labels:
    k8s-app: traefik-ingress-lb
    # traffic-type: internal
spec:
  selector:
    k8s-app: traefik-ingress-lb
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      name: web
    - protocol: TCP
      port: 443
      name: https
    - protocol: TCP
      port: 8080
      name: admin
  type: LoadBalancer
  loadBalancerIP: 192.168.205.13
---
# LOOK AT ME: https://docs.traefik.io/user-guide/kubernetes/
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress-lb
  namespace: traefik-system
  # labels:
  #   traffic-type: internal
  # annotations:
  #   traffic-type: internal
  # annotations:
  #   kubernetes.io/ingress.class: traefik-internal
  #   traefik.frontend.rule.type: PathPrefix
spec:
  rules:
  - host: traefik-internal.scarlettlab.com
    http:
      paths:
      - path: /
        backend:
          serviceName: traefik-ingress-service
          servicePort: admin
